2008-04-30  Ashish Shrivastava <shashish@novell.com>

        ** Fix for bnc #368277
        Can't C & P Email Addresses from an Appt. to a Mail Message

	* gui/e-select-names-renderer.c:
	(e_select_names_renderer_start_editing):

2008-04-29  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #240823

	* gui/itip-utils.c: (comp_to_list):
	Send notification only to individuals and groups.

2008-04-28  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #524121

	* gui/e-calendar-table.c: (copy_row_cb):
	Fixing typo from patch for bug #516408.

2008-04-25  Danny Baumann  <dannybaumann@web.de>

	** Fix for bug #529893

	* gui/e-calendar-view.c: (e_calendar_view_get_tooltips):
	Properly set type hint on tooltip window.

2008-04-18  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #509923

	* gui/dialogs/comp-editor.c: (real_send_comp):
	* gui/e-calendar-view.c: (e_calendar_view_modify_and_send):
	* gui/e-cal-model-calendar.c: (ecmc_set_value_at):
	Send changes based on the user's choice of "all instances" or
	"only this instance" for recurring events.
	* gui/e-cal-model-calendar.c: (ecmc_set_value_at):
	Also modify objects based on the user's choice.

2008-04-17  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #526739

	* gui/e-meeting-store.c: (start_async_read), (freebusy_async),
	(async_read): Read data with gio, not with gnome-vfs.
	* gui/e-meeting-store.c: (async_close): Function removed.
	* gui/migration.c:
	* gui/e-memos.c:
	* gui/alarm-notify/notify-main.c:
	* gui/e-tasks.c:
	* gui/main.c:
	* gui/e-meeting-list-view.c:
	Do not include gnome-vfs.
	* gui/dialogs/comp-editor.c: (set_attachment_list):
	* gui/dialogs/comp-editor.c: (attachment_guess_mime_type):
	Function removed, use e-util function instead.
	* gui/e-cal-popup.c: (temp_save_part):
	Reflect changes in CamelStreamVFS.
	* gui/e-cal-popup.c: (ecalp_apps_open_in), (ecalp_apps_popup_free),
	(ecalp_standard_menu_factory): Use gio to fill popup and launch app.